
syntax = "proto3";

option java_multiple_files=true;

package helloworld;

service GreeterService {
    rpc sayHello(HelloRequest) returns (HelloReply) {}

    rpc sayHelloAgain(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string greeting = 1;
}